fix: delete route for file
